--- a/NexterPremierLeague1.html
+++ b/NexterPremierLeague1.html
@@ -46,22 +46,6 @@
 "playInNatPlayer": "true"
     },
 {  
-name:"Premier Football HD 1FWC",
-image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl1.png",
-url:"https://fw4free.inwstream.com/fw4free/ch1.stream/chunks.m3u8",
-"referer": "https://madoo.com/",
-"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
-"playInNatPlayer": "true"
-},
-{  
-name:"Premier Football HD 1FWCL",
-image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl1.png",
-url:"https://fw4free.inwstream.com/fw4free/ch1.stream/chunklist.m3u8",
-"referer": "https://madoo.com/",
-"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
-"playInNatPlayer": "true"
-},
-{  
 name:"Premier Football HD 1FW",
 image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl1.png",
 url:"https://fw4free.inwstream.com/fw4free/ch1.stream/playlist.m3u8",
@@ -69,14 +53,7 @@ url:"https://fw4free.inwstream.com/fw4free/ch1.stream/playlist.m3u8",
 "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
 "playInNatPlayer": "true"
 },
-{  
-name:"Premier HD1 DB112m3",
-image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl1.png",
-url:"https://rr3-ic3d-ndjcs.huaweicdncloud.com/dooball2you/tpf1/th-sport/tpf1/chunks.m3u8?nimblesessionid=294769422",
-"referer": "https://dooball2you.com/",
-"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
-"playInNatPlayer": "true"
-},
+
 {  
 name:"Premier HD1 DB112",
 image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl1.png",
@@ -85,14 +62,7 @@ url:"https://dooball2you.com/live/tpf1/",
 "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
 "playInNatPlayer": "true"
 },
-{  
-name:"Premier HD1 DBPLUSm3",
-image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl1.png",
-url:"https://rr3-ic3d-ndjcs.huaweicdncloud.com/dooballplus/tpf1/th-sport/tpf1/chunks.m3u8?nimblesessionid=294770810&wmsAuthSign=c2VydmVyX3RpbWU9MTAvNC8yMDI0IDI6Mzk6MDMgUE0maGFzaF92YWx1ZT1rS2RUZ0RIUkdWSUdSZlBCUGVVb0pnPT0mdmFsaWRtaW51dGVzPTEw",
-"referer": "https://dooballplus.live/",
-"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
-"playInNatPlayer": "true"
-},
+
 {  
 name:"Premier HD1 DBPLUS",
 image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl1.png",
@@ -101,14 +71,7 @@ url:"https://dooballplus.live/tpf1/",
 "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
 "playInNatPlayer": "true"
 },
-{  
-name:"Premier HD1 DB888m3",
-image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl1.png",
-url:"https://rr3-ic3d-ndjcs.huaweicdncloud.com/andaman888th/tpf1/th-sport/tpf1/chunks.m3u8?nimblesessionid=294771014",
-"referer": "https://www.andaman888th.com/",
-"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
-"playInNatPlayer": "true"
-},
+
 {  
 name:"Premier HD1 DB888",
 image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl1.png",
@@ -117,6 +80,52 @@ url:"https://www.andaman888th.com/%E0%B8%94%E0%B8%B9%E0%B8%9A%E0%B8%AD%E0%B8%A5%
 "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
 "playInNatPlayer": "true"
 },
+
+{"name":"Premier1-A🇹🇭",
+"image":"https://i.imgur.com/q5yTJTF.png",
+"url":"https://streaming.livescorethai.net/iptv/epl-1.stream/chunks.m3u8",
+"referer": "https://livescorethai.net/",
+"playInNatPlayer":"true"},
+
+{"name":"Premier1-B🇹🇭",
+"image":"https://i.imgur.com/q5yTJTF.png",
+"url": "https://cdn1.googlecdn.live/dooballx/epl1_sd/chunks.m3u8",
+"referer": "https://dooballx.com/",
+"playInNatPlayer": "true"},
+
+{"name":"Premier1-C🇹🇭",
+"image":"https://i.imgur.com/q5yTJTF.png",
+"url":"https://dolive.thaim3u.com/doolive4k-tv/siamsport-1/chunks.m3u8",
+"referer": "https://doolive4k.tv/",
+"playInNatPlayer": "true"},
+
+{"name":"Premier1-D🇹🇭",
+"image":"https://i.imgur.com/q5yTJTF.png",
+"url":"https://www.livedoomovies.com:4432/02_PremierHD1_720p/chunklist.m3u8",
+"referer": "https://www.madoohd.com/",
+"playInNatPlayer":"true"},
+
+{"name":"Premier1-E🇹🇭",
+"image":"https://i.imgur.com/q5yTJTF.png",
+"url":"https://rr3-ic3d-ndjcs.huaweicdncloud.com/dooball2you/tpf1/th-sport/tpf1/chunks.m3u8",
+"referer": "https://dooball2you.com/",
+"playInNatPlayer":"true"},
+
+{"name":"Premier1-F🇹🇭",
+"image":"https://i.imgur.com/q5yTJTF.png",
+"url":"https://www.ufa77.fun/channel?ch=epl1",
+"playInNatPlayer":"true"},
+
+{"name":"Premier1-G🇹🇭",
+"image":"https://i.imgur.com/q5yTJTF.png",
+"url":"https://streaming.livescorethai.net/iptv/bsb-epl1.stream/chunks.m3u8",
+"referer": "https://livescorethai.net/",
+"playInNatPlayer":"true"},
+
+{"name":"Premier1-H🇹🇭",
+"image":"https://i.imgur.com/q5yTJTF.png",
+"url":"https://dooballkub.com/live/?epl1",
+"playInNatPlayer":"true"},
 
     {
      "name": "True Premier Football 2",
@@ -153,14 +162,7 @@ url:"https://fw4free.inwstream.com/fw4free/ch2.stream/playlist.m3u8",
 "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
 "playInNatPlayer": "true"
 },
-{  
-name:"Premier HD2 DB112m3",
-image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl2.png",
-url:"https://rr3-ic3d-ndjcs.huaweicdncloud.com/dooball2you/tpf2/th-sport/tpf2/chunks.m3u8?nimblesessionid=294771385",
-"referer": "https://dooball2you.com/",
-"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
-"playInNatPlayer": "true"
-},
+
 {  
 name:"Premier HD2 DB112",
 image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl2.png",
@@ -169,14 +171,7 @@ url:"https://dooball2you.com/live/tpf2/",
 "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
 "playInNatPlayer": "true"
 },
-{  
-name:"Premier HD2 DBPLUSm3",
-image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl2.png",
-url:"https://rr3-ic3d-ndjcs.huaweicdncloud.com/dooballplus/tpf2/th-sport/tpf2/chunks.m3u8?nimblesessionid=294771720&wmsAuthSign=c2VydmVyX3RpbWU9MTAvNC8yMDI0IDM6NTk6MjIgUE0maGFzaF92YWx1ZT1ydGcvR2tudHBNcWZRNFg4V2ZCcnBnPT0mdmFsaWRtaW51dGVzPTEw",
-"referer": "https://dooballplus.live/",
-"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
-"playInNatPlayer": "true"
-},
+
 {  
 name:"Premier HD2 DBPLUS",
 image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl2.png",
@@ -185,14 +180,7 @@ url:"https://dooballplus.live/tpf2/",
 "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
 "playInNatPlayer": "true"
 },
-{  
-name:"Premier HD2 DB888m3",
-image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl2.png",
-url:"https://rr3-ic3d-ndjcs.huaweicdncloud.com/andaman888th/tpf2/th-sport/tpf2/chunks.m3u8?nimblesessionid=294771937",
-"referer": "https://www.andaman888th.com/",
-"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
-"playInNatPlayer": "true"
-},
+
 {  
 name:"Premier HD2 DB888",
 image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl2.png",
@@ -201,6 +189,52 @@ url:"https://www.andaman888th.com/%E0%B8%94%E0%B8%B9%E0%B8%9A%E0%B8%AD%E0%B8%A5%
 "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
 "playInNatPlayer": "true"
 },
+
+{"name":"Premier2-A🇹🇭",
+"image":"https://i.imgur.com/nWHkiJC.png",
+"url":"https://streaming.livescorethai.net/iptv/bsb-epl2.stream/chunks.m3u8",
+"referer": "https://livescorethai.net/",
+"playInNatPlayer":"true"},
+
+{"name":"Premier2-B🇹🇭",
+"image":"https://i.imgur.com/nWHkiJC.png",
+"url":"https://streaming.livescorethai.net/iptv/epl-2.stream/chunks.m3u8",
+"referer": "https://livescorethai.net/",
+"playInNatPlayer":"true"},
+
+{"name":"Premier2-C🇹🇭",
+"image":"https://i.imgur.com/nWHkiJC.png",
+"url": "https://cdn1.googlecdn.live/dooballx/epl2/chunks.m3u8",
+"referer": "https://dooballx.com/",
+"playInNatPlayer": "true"},
+
+{"name":"Premier2-D🇹🇭",
+"image":"https://i.imgur.com/nWHkiJC.png",
+"url":"https://dolive.thaim3u.com/doolive4k-tv/siamsport-2/chunks.m3u8",
+"referer": "https://doolive4k.tv/",
+"playInNatPlayer": "true"},
+
+{"name":"Premier2-E🇹🇭",
+"image":"https://i.imgur.com/nWHkiJC.png",
+"url":"https://rr3-ic3d-ndjcs.huaweicdncloud.com/dooball2you/tpf2/th-sport/tpf2/chunks.m3u8",
+"referer": "https://dooball2you.com/",
+"playInNatPlayer":"true"},
+
+{"name":"Premier2-F🇹🇭",
+"image":"https://i.imgur.com/nWHkiJC.png",
+"url":"https://www.livedoomovies.com:4432/02_PremierHD2_720p/chunklist.m3u8",
+"referer": "https://www.madoohd.com/",
+"playInNatPlayer":"true"},
+
+{"name":"Premier2-G🇹🇭",
+"image":"https://i.imgur.com/nWHkiJC.png",
+"url":"https://dooballkub.com/live/?epl2",
+"playInNatPlayer":"true"},
+
+{"name":"Premier2-H🇹🇭",
+"image":"https://i.imgur.com/nWHkiJC.png",
+"url":"https://www.ufa77.fun/channel?ch=epl2",
+"playInNatPlayer":"true"},
 
 
     {
@@ -239,14 +273,7 @@ url:"https://fw4free.inwstream.com/fw4free/ch3.stream/playlist.m3u8",
 "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
 "playInNatPlayer": "true"
 },
-{  
-name:"Premier HD3 DB112m3",
-image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl3.png",
-url:"https://rr3-ic3d-ndjcs.huaweicdncloud.com/dooball2you/tpf3/th-sport/tpf3/chunks.m3u8?nimblesessionid=294772138",
-"referer": "https://dooball2you.com/",
-"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
-"playInNatPlayer": "true"
-},
+
 {  
 name:"Premier HD3 DB112",
 image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl3.png",
@@ -255,14 +282,7 @@ url:"https://dooball2you.com/live/tpf3/",
 "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
 "playInNatPlayer": "true"
 },
-{  
-name:"Premier HD3 DBPLUSm3",
-image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl3.png",
-url:"https://rr3-ic3d-ndjcs.huaweicdncloud.com/dooballplus/tpf3/th-sport/tpf3/chunks.m3u8?nimblesessionid=294772423&wmsAuthSign=c2VydmVyX3RpbWU9MTAvNS8yMDI0IDExOjI3OjE5IEFNJmhhc2hfdmFsdWU9SDNpY0FuY0wvWFlaN0Nma0QvMDJmUT09JnZhbGlkbWludXRlcz0xMA==",
-"referer": "https://dooballplus.live/",
-"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
-"playInNatPlayer": "true"
-},
+
 {  
 name:"Premier HD3 DBPLUS",
 image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl3.png",
@@ -271,14 +291,7 @@ url:"https://dooballplus.live/tpf3/",
 "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
 "playInNatPlayer": "true"
 },
-{  
-name:"Premier HD3 B888m3",
-image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl3.png",
-url:"https://rr3-ic3d-ndjcs.huaweicdncloud.com/andaman888th/tpf3/th-sport/tpf3/chunks.m3u8?nimblesessionid=294772562",
-"referer": "https://www.andaman888th.com/",
-"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
-"playInNatPlayer": "true"
-},
+
 {  
 name:"Premier HD3 B888",
 image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl3.png",
@@ -287,6 +300,18 @@ url:"https://www.andaman888th.com/%E0%B8%94%E0%B8%B9%E0%B8%9A%E0%B8%AD%E0%B8%A5%
 "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
 "playInNatPlayer": "true"
 },
+
+{"name":"Premier3-A🇹🇭",
+"image":"https://i.imgur.com/7vyIa83.png",
+"url":"https://streaming.livescorethai.net/iptv/epl-3.stream/chunks.m3u8",
+"referer": "https://livescorethai.net/",
+"playInNatPlayer":"true"},
+
+{"name":"Premier3-B🇹🇭",
+"image":"https://i.imgur.com/7vyIa83.png",
+"url": "https://cdn1.googlecdn.live/dooballx/epl3/chunks.m3u8",
+"referer": "https://dooballx.com/",
+"playInNatPlayer": "true"},
 
 
     {
@@ -326,6 +351,18 @@ url:"https://fw4free.inwstream.com/fw4free/ch4.stream/playlist.m3u8",
 "playInNatPlayer": "true"
 },
 
+{"name":"Premier4-A🇹🇭",
+"image":"https://i.imgur.com/jotDScK.png",
+"url":"https://streaming.livescorethai.net/iptv/epl-4.stream/chunks.m3u8",
+"referer": "https://livescorethai.net/",
+"playInNatPlayer":"true"},
+
+{"name":"Premier4-B🇹🇭",
+"image":"https://i.imgur.com/jotDScK.png",
+"url": "https://cdn1.googlecdn.live/dooballx/epl4/chunks.m3u8",
+"referer": "https://dooballx.com/",
+"playInNatPlayer": "true"},
+
 
     {
      "name": "True Premier Football 5",
@@ -363,6 +400,18 @@ url:"https://fw4free.inwstream.com/fw4free/ch5.stream/playlist.m3u8",
 "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
 "playInNatPlayer": "true"
 },
+
+{"name":"Premier5-A🇹🇭",
+"image":"https://i.imgur.com/a2Zsceg.png",
+"url":"https://streaming.livescorethai.net/iptv/epl-5.stream/chunks.m3u8",
+"referer": "https://livescorethai.net/",
+"playInNatPlayer":"true"},
+
+{"name":"Premier5-B🇹🇭",
+"image":"https://i.imgur.com/a2Zsceg.png",
+"url": "https://cdn1.googlecdn.live/dooballx/epl5/chunks.m3u8",
+"referer": "https://dooballx.com/",
+"playInNatPlayer": "true"},
 
 
 
