--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -7,9 +7,9 @@
 "stations" : [
 
         {  
-name:"King Kong (1976)",
-image:"https://m.media-amazon.com/images/M/MV5BNGQ1MGRmNzQtMjAwYi00NDllLTgzOWUtOWJkM2E4MjhhNWI3XkEyXkFqcGc@._V1_.jpg",
-url:"https://live.lnwplayer.com/hls/ade0ed14-dfd4-4469-8f59-9d90745f986e/index.m3u8",
+name:"Live Wire พยัคฆ์ร้ายหยุดนรก (1992)",
+image:"https://fwiptv.tv/images/movie/20220227111400live-wire-5d3a1082cc088.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Live_Wire_1992/Live_Wire_1992_TH_1080p.mp4/playlist.m3u8",
 "referer": "https://www.fwiptv.tv/",
 "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
 "playInNatPlayer": "true"
