--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -9,7 +9,7 @@
         {  
 name:"Live Wire พยัคฆ์ร้ายหยุดนรก (1992)",
 image:"https://fwiptv.tv/images/movie/20220227111400live-wire-5d3a1082cc088.jpg",
-url:"https://m1free.inwstream.com:1936/movie3/Live_Wire_1992/Live_Wire_1992_TH_1080p.mp4/playlist.m3u8",
+url:"https://m1free.inwstream.com:1936/movie3/Live_Wire_1992/Live_Wire_1992_TH_1080p.mp4/chunk.m3u8",
 "referer": "https://www.fwiptv.tv/",
 "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
 "playInNatPlayer": "true"
