--- a/NexterPremierLeague1.html
+++ b/NexterPremierLeague1.html
@@ -81,6 +81,15 @@ url:"https://www.andaman888th.com/%E0%B8%94%E0%B8%B9%E0%B8%9A%E0%B8%AD%E0%B8%A5%
 "playInNatPlayer": "true"
 },
 
+{  
+name:"Premier HD1 UFA",
+image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl1.png",
+url:"https://dolive.thaim3u.com/tFQe38qxw4awKkMJD3kcfcekVSrfLnY9/siamsport-1/playlist.m3u8",
+"referer": "https://www.andaman888th.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
 {"name":"Premier1-A🇹🇭",
 "image":"https://i.imgur.com/q5yTJTF.png",
 "url":"https://streaming.livescorethai.net/iptv/epl-1.stream/chunks.m3u8",
@@ -185,6 +194,14 @@ url:"https://dooballplus.live/tpf2/",
 name:"Premier HD2 DB888",
 image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl2.png",
 url:"https://www.andaman888th.com/%E0%B8%94%E0%B8%B9%E0%B8%9A%E0%B8%AD%E0%B8%A5%E0%B8%AD%E0%B8%AD%E0%B8%99%E0%B9%84%E0%B8%A5%E0%B8%99%E0%B9%8C/truepremierfootballhd2/",
+"referer": "https://www.andaman888th.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+{  
+name:"Premier HD2 UFA",
+image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl2.png",
+url:"https://dolive.thaim3u.com/tFQe38qxw4awKkMJD3kcfcekVSrfLnY9/siamsport-2/playlist.m3u8",
 "referer": "https://www.andaman888th.com/",
 "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
 "playInNatPlayer": "true"
@@ -300,6 +317,14 @@ url:"https://www.andaman888th.com/%E0%B8%94%E0%B8%B9%E0%B8%9A%E0%B8%AD%E0%B8%A5%
 "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
 "playInNatPlayer": "true"
 },
+{  
+name:"Premier HD3 UFA",
+image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl3.png",
+url:"https://dolive.thaim3u.com/tFQe38qxw4awKkMJD3kcfcekVSrfLnY9/siamsport-3/playlist.m3u8",
+"referer": "https://www.andaman888th.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
 
 {"name":"Premier3-A🇹🇭",
 "image":"https://i.imgur.com/7vyIa83.png",
@@ -350,6 +375,14 @@ url:"https://fw4free.inwstream.com/fw4free/ch4.stream/playlist.m3u8",
 "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
 "playInNatPlayer": "true"
 },
+{  
+name:"Premier Football HD 4 UFA",
+image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl4.png",
+url:"https://dolive.thaim3u.com/tFQe38qxw4awKkMJD3kcfcekVSrfLnY9/siamsport-4/playlist.m3u8",
+"referer": "https://madoo.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
 
 {"name":"Premier4-A🇹🇭",
 "image":"https://i.imgur.com/jotDScK.png",
@@ -396,6 +429,14 @@ url:"https://fw4free.inwstream.com/fw4free/ch4.stream/playlist.m3u8",
 name:"Premier Football HD 5FW",
 image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl5.png",
 url:"https://fw4free.inwstream.com/fw4free/ch5.stream/playlist.m3u8",
+"referer": "https://madoo.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+{  
+name:"Premier Football HD 5 UFA",
+image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl5.png",
+url:"https://dolive.thaim3u.com/tFQe38qxw4awKkMJD3kcfcekVSrfLnY9/siamsport-5/playlist.m3u8",
 "referer": "https://madoo.com/",
 "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
 "playInNatPlayer": "true"
