--- a/KhunKamMeeChannel 1F.html
+++ b/KhunKamMeeChannel 1F.html
@@ -2547,7 +2547,7 @@ image:"https://dookeela.live/uploads/1664847921.png",
 
 {
    "name": "BeIN Sport",
-   "image": "https://upload.wikimedia.org/wikipedia/en/thumb/f/f2/Premier_League_Logo.svg/1200px-Premier_League_Logo.svg.png",
+   "image": "https://upload.wikimedia.org/wikipedia/commons/thumb/2/20/Bein_sport_logo.png/2560px-Bein_sport_logo.png",
    "stations": [
    
    
@@ -3155,7 +3155,7 @@ url:"https://fw4free.inwstream.com/fw4free/bein3.stream/playlist.m3u8",
 
 {
    "name": "Sports Nexter ALL-Channel",
-   "image": "https://static.vecteezy.com/system/resources/previews/019/956/198/original/netflix-transparent-netflix-free-free-png.png",
+   "image": "https://upload.wikimedia.org/wikipedia/commons/thumb/3/32/Nexter_Logo.svg/2560px-Nexter_Logo.svg.png",
    "stations": [
    
    
