--- a/KhunKamMeeChannel 1F.html
+++ b/KhunKamMeeChannel 1F.html
@@ -9019,6 +9019,26 @@ image:"https://upload.wikimedia.org/wikipedia/commons/thumb/8/85/Newsmax_logo.sv
 	
  ]
 },
+
+
+	   {
+   "name": "Watch IPTV ALL",
+   "image": "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQSgnV9n5glTl6nvkfU22sh0woDFv8LvRjoVQ&usqp=CAU",
+   "groups": [
+
+  
+  
+    {
+     "name": "3BB Asian",
+     "image": "https://dookeela.live/uploads/1703829940.png",
+     "url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/Watchlakorn.html",
+     "referer": "https://dookeela.live/",
+    },
+
+	
+	
+ ]
+},
   
   
   
