--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -6,6 +6,64 @@
 "info": "โรงหนังของแล้ม",
 "stations" : [
 
+
+
+
+{  
+name:"Operation Blood Hunt (2024)",
+image:"https://m.media-amazon.com/images/M/MV5BZTc1MzQxNmYtZjdjMS00Mzk1LTk5NjctNmM3OWQyMGYyYjhlXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg",
+url:"https://m1free.inwstream.com:1936/movie4/Operation_Blood_Hunt_2024/Operation_Blood_Hunt_2024_th_1080.mp4/playlist.m3u8",
+"referer": "https://www.fwiptv.tv/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+{  
+name:"Lift ปล้นเหนือเมฆ (2024) NETFLIX",
+image:"https://image.tmdb.org/t/p/w500/bVFvLErgZ446vnIyfnRCt8H2pdP.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Lift_2024/Lift_2024_th_1080.mp4/chunk.m3u8",
+"referer": "https://www.fwiptv.tv/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+{  
+name:"โรลเพลย์ สวมรอยมารัก (2023)",
+image:"https://image.tmdb.org/t/p/w500/7MhXiTmTl16LwXNPbWCmqxj7UxH.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Role_Play_2023/Role_Play_2023_th_1080.mp4/chunk.m3u8",
+"referer": "https://www.fwiptv.tv/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+{  
+name:"ข้านี่แหละ นิค ‘ฟักกลิ้ง’ เคจ (2022)",
+image:"https://www.bloggang.com/data/p/pitchayut8/picture/1653413491.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/The_Unbearable_Weight_of_Massive_Talent_2022/The_Unbearable_Weight_of_Massive_Talent_2022_th_1080.mp4/chunk.m3u8",
+"referer": "https://www.fwiptv.tv/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+{  
+name:"ซือเจ๊ทะลุมัลติเวิร์ส (2022)",
+image:"https://upload.wikimedia.org/wikipedia/th/7/7c/EEAAO_thai_poster.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Everything_Everywhere_All_at_Once_2022/Everything_Everywhere_All_at_Once_2022_th_1080.mp4/chunk.m3u8",
+"referer": "https://www.fwiptv.tv/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+        
         {  
 name:"Live Wire พยัคฆ์ร้ายหยุดนรก (1992)",
 image:"https://fwiptv.tv/images/movie/20220227111400live-wire-5d3a1082cc088.jpg",
