--- a/Documentary.html
+++ b/Documentary.html
@@ -4,7 +4,13 @@
 "url": "https://pastebin.com/PLAv0Juc",
 "stations" : [
 
-
+{
+     "name": "Animal Planet m3",
+     "image": "https://dookeela.live/uploads/1706112700.png",
+     "url": "https://streamamg-fa.akamaiz.com/dookeela/animal-planet/chunks.m3u8",
+     "referer": "https://dookeela.live/",
+     "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/106.0.0.0 Safari/537.36"
+    },
 {
      "name": "Animal Planet",
      "image": "https://dookeela.live/uploads/1706112700.png",
