--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -6,7 +6,14 @@
 "info": "โรงหนังของแล้ม",
 "stations" : [
 
-
+{  
+name:"Violent Night คืนเดือด (2022)",
+image:"https://cms.dmpcdn.com/dara/2022/10/28/5c97f3a0-56cd-11ed-83bb-c765b6a50172_webp_original.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Violent_Night_2022/Violent_Night_2022_th_1080_FF.mp4/chunk.m3u8",
+"referer": "https://www.fwiptv.tv/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
 
 {  
 name:"โรลเพลย์ สวมรอยมารัก (2023)",
