--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -10,7 +10,7 @@
 {  
 name:"Hero Wanted (2008) หมายหัวล่า ฮีโร่แค้นระห่ำ",
 image:"https://fwiptv.tv/images/movie/oisuSmfL0f69rUqGTbgKrYeWumFQPWD.jpg",
-url:"https://live.lnwplayer.com/hls/0b4b6ff4-883e-4f60-954b-d0c7a8c7e7e2/index.m3u8",
+url:"https://m1free.inwstream.com:1936/movie3/Hero_Wanted_2008/Hero_Wanted_2008_TH_1080p.mp4/chunk.m3u8",
 "referer": "https://www.fwiptv.tv/",
 "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
 "playInNatPlayer": "true"
