--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -6,17 +6,14 @@
 "info": "โรงหนังของแล้ม",
 "stations" : [
 
-
 {  
-name:"Hero Wanted (2008) หมายหัวล่า ฮีโร่แค้นระห่ำ",
-image:"https://fwiptv.tv/images/movie/oisuSmfL0f69rUqGTbgKrYeWumFQPWD.jpg",
-url:"https://m1free.inwstream.com:1936/movie3/Hero_Wanted_2008/Hero_Wanted_2008_TH_1080p.mp4/chunk.m3u8",
+name:"Death Wish 4: The Crackdown (1987)",
+image:"https://m.media-amazon.com/images/M/MV5BNTE4NzcyNTA0NV5BMl5BanBnXkFtZTcwODY5OTMyMQ@@._V1_.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Death_Wish_4_The_Crackdown_1987/Death_Wish_4_The_Crackdown_1987_th_1080.mp4/chunk.m3u8",
 "referer": "https://www.fwiptv.tv/",
 "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
 "playInNatPlayer": "true"
 },
-
-
     
 {  
 name:"Violent Night คืนเดือด (2022)",
