--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -7,6 +7,17 @@
 "stations" : [
 
 
+
+{  
+name:"The Painter จิตรกร (2024)",
+image:"https://m.media-amazon.com/images/M/MV5BNjAxOTU0YmMtOTdjMC00ZjY5LWJjNTAtMjRhM2E2YTQ3YmNmXkEyXkFqcGc@._V1_.jpg",
+url:"https://m1free.inwstream.com:1936/movie4/The_Painter_2024/The_Painter_2024_th_1080.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
 {  
 name:"The Burning Sea ( Nordsjøen) มหาวิบัติหายนะทะเลเพลิง (2021)",
 image:"https://img.inwiptv.net/postor/202208260242371bB7uV5ljDWKG2m5Z4cgWwDMAeY.jpg",
