--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -7,6 +7,14 @@
 "stations" : [
 
 
+{  
+name:"Shark Bait (Jetski) ฉลามคลั่ง ซัมเมอร์นรก (2022)",
+image:"https://img.inwiptv.net/postor/20220605073224shark-bait-627ec10ea054f.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Shark_Bait_2022/Shark_Bait_2022_th_1080p.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
 
 {  
 name:"The Painter จิตรกร (2024)",
