--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -7,6 +7,57 @@
 "stations" : [
 
 
+
+{  
+name:"ธี่หยด 2 Death Whisperer 2 (2024)",
+image:"https://img.inwiptv.net/postor/20241020174720xPTyukOmTrJDwGPwHYwxEMieaqk.jpg",
+url:"https://m1free.inwstream.com:1936/movie4/Death_Whisperer_2_2024/Death_Whisperer_2_2024_thr_v1.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+{  
+name:"ธี่หยด Death Whisperer (2023)",
+image:"https://img.inwiptv.net/postor/2024102200104848TDjSJpCdJ4SBOHZX3G5IjaV02.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Death_Whisperer_2023/Death_Whisperer_2023_th_1080.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+    
+{  
+name:"V.1 Canary Black รหัสลับดับโลก (2024)ZOOM",
+image:"https://img.inwiptv.net/postor/20241019070452MV5BYjFiY2M0NTEtYzNlNS00ZGUwLWE5ZjYtYTlhZTJmYmMyOGJkXkEyXkFqcGc@._V1_.jpg",
+url:"https://m1free.inwstream.com:1936/movie4/Canary_Black_2024/Canary_Black_2024_thr_v1.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+{  
+name:"VR Fighter นักสู้ วีอาร์ ล่าเดนคน (2021)",
+image:"https://img.inwiptv.net/postor/20241019065735oi3KZaxsQsMnbv7du1cJz7lpw4r.jpg",
+url:"https://m1free.inwstream.com:1936/movie4/VR_Fighter_2021/VR_Fighter_2021_th_1080.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+{  
+name:"The Shadow Strays นักฆ่าเงาล่าทรชน (2024) NETFLIX",
+image:"https://img.inwiptv.net/postor/20241018035323cfkcrKySRyJiIdLo6c6kNSyLFh7.jpg",
+url:"https://m1free.inwstream.com:1936/movie4/The_Shadow_Strays_2024/The_Shadow_Strays_2024_th_1080.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
 {  
 name:"Shark Bait (Jetski) ฉลามคลั่ง ซัมเมอร์นรก (2022)",
 image:"https://img.inwiptv.net/postor/20220605073224shark-bait-627ec10ea054f.jpg",
