--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -7,6 +7,34 @@
 "stations" : [
 
 
+{  
+name:"Infinite อินฟินิท (2021)",
+image:"https://img.inwiptv.net/postor/20210611172102v0aUBv78iGqO7eiWnrVcxr5zqOZ.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Infinite_2021/Infinite_2021_th_1080p.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+{  
+name:"Secret Headquarters กองบัญชาการลับ (2022)",
+image:"https://img.inwiptv.net/postor/202209301613088PsHogUfvjWPGdWAI5uslDhHDx7.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Secret_Headquarters_2022/Secret_Headquarters_2022_th_1080p_F.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+{  
+name:"Narvik นาร์วิค (2022) NETFLIX",
+image:"https://img.inwiptv.net/postor/20230126173253gU4mmINWUF294Wzi8mqRvi6peMe.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Narvik_2022/Narvik_2022_th_1080p.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
 
 {  
 name:"ธี่หยด 2 Death Whisperer 2 (2024)",
