--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -8,9 +8,19 @@
 
 
 {  
-name:"My Name Is Vendetta ในนามของความแค้น (2022) NETFLIX",
-image:"https://img.inwiptv.net/postor/2022120117464120ASx7RtOvfBjumlO5isS5eM0NJ.jpg",
-url:"https://m1free.inwstream.com:1936/movie3/My_Name_Is_Vendetta_2022/My_Name_Is_Vendetta_2022_th_1080p.mp4/chunk.m3u8",
+name:"แนวรบด้านตะวันตก เหตุการณ์ไม่เปลี่ยนแปลง (2022) NETFLIX",
+image:"https://img.inwiptv.net/postor/20221029145243rFUDYHHDmN0SFMKsjfPTRxj38Tu.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/All_Quiet_on_the_Western_Front_2022/All_Quiet_on_the_Western_Front_2022_th_1080p_1.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+    
+{  
+name:"เฉือนเหลี่ยม กระสุนจับตาย (2010)",
+image:"https://img.inwiptv.net/postor/20180809120937MV5BMjM1NDc5OTc1NF5BMl5BanBnXkFtZTgwMzE4NjI2MDE@._V1_.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Triple-Tap-2010/Triple-Tap-2010-TH-1080p.mp4/chunk.m3u8",
 "referer": "https://www.123-hd.com/",
 "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
 "playInNatPlayer": "true"
