--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -8,6 +8,15 @@
 
 
 {  
+name:"Venom The Last Dance เวน่อม มหาศึกอสูรอหังการ (2024)",
+image:"https://fwiptv.tv/images/movie/Venom_The_Last_Dance.webp",
+url:"https://m1free.inwstream.com:1936/movie4/Venom_The_Last_Dance_2024/Venom_The_Last_Dance_2024_thr_v1.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+    
+{  
 name:"แนวรบด้านตะวันตก เหตุการณ์ไม่เปลี่ยนแปลง (2022) NETFLIX",
 image:"https://img.inwiptv.net/postor/20221029145243rFUDYHHDmN0SFMKsjfPTRxj38Tu.jpg",
 url:"https://m1free.inwstream.com:1936/movie3/All_Quiet_on_the_Western_Front_2022/All_Quiet_on_the_Western_Front_2022_th_1080p_1.mp4/chunk.m3u8",
