--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -6,6 +6,24 @@
 "info": "โรงหนังของแล้ม",
 "stations" : [
 
+    
+{  
+name:"แกะรอยในความมืด (2022) NETFLIX",
+image:"https://img.inwiptv.net/postor/20220924064703djM2s4wSaATn4jVB33cV05PEbV7.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Lou_2022/Lou_2022_th_1080p_NF.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+{  
+name:"The Protege (The Protégé) เธอ... รหัสสังหาร (2021)",
+image:"https://img.inwiptv.net/postor/20220912164400iQUj7MptHUlcXpaMLrqRNZRxGA9.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/The_Protege_2021/The_Protege_2021_th_1080p.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
 
 {  
 name:"Venom The Last Dance เวน่อม มหาศึกอสูรอหังการ (2024)",
