--- a/DigitalTV.html
+++ b/DigitalTV.html
@@ -209,7 +209,14 @@
 "playInNatPlayer": "true" 
 }, 
 
-
+{
+"name": "NBT2HD",
+"image": "https://upload.wikimedia.org/wikipedia/commons/9/9d/NBT_Logo.png",
+"imageScale": "fitStart",
+"url": "https://cco-streamer1.cdn.3bbtv.com:8443/3bb/live/2/2.mpd",
+"online": "true",
+"userAgent": "ExoPlayer",
+"drm": "clearkey", "drmkey": "ca20a93cf8e3421dafbd5bdb1990081b:86ae86a7391c481ea93eecdb740f0a14"},
 { 
 "name": "NBT2HD",  
 "image": "https://upload.wikimedia.org/wikipedia/commons/9/9d/NBT_Logo.png", 
@@ -217,7 +224,16 @@
 "referer": "",
 "playInNatPlayer": "true" 
 },   
- 
+
+ {
+"name": "Thai Pbs",
+"image": "https://ais-s.ais-vidnt.com/ais/play/origin/LIVE//channelicon/0014.png",
+"imageScale": "fitStart",
+"url": "https://cco-streamer1.cdn.3bbtv.com:8443/3bb/live/3/3.mpd",
+"online": "true",
+"userAgent": "ExoPlayer",
+"drm": "clearkey", "drmkey": "4d4426a505f64382a9841155d721cee6:0f4770219ccb4be5836a7517057e51c3"},
+
 { 
 "name": "Thai Pbs",  
 "image": "https://ais-s.ais-vidnt.com/ais/play/origin/LIVE//channelicon/0014.png", 
