--- a/NexterPremierLeague1.html
+++ b/NexterPremierLeague1.html
@@ -110,50 +110,51 @@ url:"https://www.andaman888th.com/%E0%B8%94%E0%B8%B9%E0%B8%9A%E0%B8%AD%E0%B8%A5%
 
 
 {"name":"Premier1-A🇹🇭",
-"image":"https://i.imgur.com/q5yTJTF.png",
+"image":"https://dookeela.live/uploads/1664499665.png",
 "url":"https://streaming.livescorethai.net/iptv/epl-1.stream/chunks.m3u8",
 "referer": "https://livescorethai.net/",
 "playInNatPlayer":"true"},
 
 {"name":"Premier1-B🇹🇭",
-"image":"https://i.imgur.com/q5yTJTF.png",
+"image":"https://dookeela.live/uploads/1664499665.png",
 "url": "https://cdn1.googlecdn.live/dooballx/epl1_sd/chunks.m3u8",
 "referer": "https://dooballx.com/",
 "playInNatPlayer": "true"},
 
 {"name":"Premier1-C🇹🇭",
-"image":"https://i.imgur.com/q5yTJTF.png",
+"image":"https://dookeela.live/uploads/1664499665.png",
 "url":"https://dolive.thaim3u.com/doolive4k-tv/siamsport-1/chunks.m3u8",
 "referer": "https://doolive4k.tv/",
 "playInNatPlayer": "true"},
 
 {"name":"Premier1-D🇹🇭",
-"image":"https://i.imgur.com/q5yTJTF.png",
+"image":"https://dookeela.live/uploads/1664499665.png",
 "url":"https://www.livedoomovies.com:4432/02_PremierHD1_720p/chunklist.m3u8",
 "referer": "https://www.madoohd.com/",
 "playInNatPlayer":"true"},
 
 {"name":"Premier1-E🇹🇭",
-"image":"https://i.imgur.com/q5yTJTF.png",
+"image":"https://dookeela.live/uploads/1664499665.png",
 "url":"https://rr3-ic3d-ndjcs.huaweicdncloud.com/dooball2you/tpf1/th-sport/tpf1/chunks.m3u8",
 "referer": "https://dooball2you.com/",
 "playInNatPlayer":"true"},
 
 {"name":"Premier1-F🇹🇭",
-"image":"https://i.imgur.com/q5yTJTF.png",
+"image":"https://dookeela.live/uploads/1664499665.png",
 "url":"https://www.ufa77.fun/channel?ch=epl1",
 "playInNatPlayer":"true"},
 
 {"name":"Premier1-G🇹🇭",
-"image":"https://i.imgur.com/q5yTJTF.png",
+"image":"https://dookeela.live/uploads/1664499665.png",
 "url":"https://streaming.livescorethai.net/iptv/bsb-epl1.stream/chunks.m3u8",
 "referer": "https://livescorethai.net/",
 "playInNatPlayer":"true"},
 
 {"name":"Premier1-H🇹🇭",
-"image":"https://i.imgur.com/q5yTJTF.png",
+"image":"https://dookeela.live/uploads/1664499665.png",
 "url":"https://dooballkub.com/live/?epl1",
 "playInNatPlayer":"true"},
+
 
     {
      "name": "True Premier Football 2",
@@ -246,48 +247,48 @@ url:"https://www.andaman888th.com/%E0%B8%94%E0%B8%B9%E0%B8%9A%E0%B8%AD%E0%B8%A5%
 
 
 {"name":"Premier2-A🇹🇭",
-"image":"https://i.imgur.com/nWHkiJC.png",
+"image":"https://dookeela.live/uploads/1664499673.png",
 "url":"https://streaming.livescorethai.net/iptv/bsb-epl2.stream/chunks.m3u8",
 "referer": "https://livescorethai.net/",
 "playInNatPlayer":"true"},
 
 {"name":"Premier2-B🇹🇭",
-"image":"https://i.imgur.com/nWHkiJC.png",
+"image":"https://dookeela.live/uploads/1664499673.png",
 "url":"https://streaming.livescorethai.net/iptv/epl-2.stream/chunks.m3u8",
 "referer": "https://livescorethai.net/",
 "playInNatPlayer":"true"},
 
 {"name":"Premier2-C🇹🇭",
-"image":"https://i.imgur.com/nWHkiJC.png",
+"image":"https://dookeela.live/uploads/1664499673.png",
 "url": "https://cdn1.googlecdn.live/dooballx/epl2/chunks.m3u8",
 "referer": "https://dooballx.com/",
 "playInNatPlayer": "true"},
 
 {"name":"Premier2-D🇹🇭",
-"image":"https://i.imgur.com/nWHkiJC.png",
+"image":"https://dookeela.live/uploads/1664499673.png",
 "url":"https://dolive.thaim3u.com/doolive4k-tv/siamsport-2/chunks.m3u8",
 "referer": "https://doolive4k.tv/",
 "playInNatPlayer": "true"},
 
 {"name":"Premier2-E🇹🇭",
-"image":"https://i.imgur.com/nWHkiJC.png",
+"image":"https://dookeela.live/uploads/1664499673.png",
 "url":"https://rr3-ic3d-ndjcs.huaweicdncloud.com/dooball2you/tpf2/th-sport/tpf2/chunks.m3u8",
 "referer": "https://dooball2you.com/",
 "playInNatPlayer":"true"},
 
 {"name":"Premier2-F🇹🇭",
-"image":"https://i.imgur.com/nWHkiJC.png",
+"image":"https://dookeela.live/uploads/1664499673.png",
 "url":"https://www.livedoomovies.com:4432/02_PremierHD2_720p/chunklist.m3u8",
 "referer": "https://www.madoohd.com/",
 "playInNatPlayer":"true"},
 
 {"name":"Premier2-G🇹🇭",
-"image":"https://i.imgur.com/nWHkiJC.png",
+"image":"https://dookeela.live/uploads/1664499673.png",
 "url":"https://dooballkub.com/live/?epl2",
 "playInNatPlayer":"true"},
 
 {"name":"Premier2-H🇹🇭",
-"image":"https://i.imgur.com/nWHkiJC.png",
+"image":"https://dookeela.live/uploads/1664499673.png",
 "url":"https://www.ufa77.fun/channel?ch=epl2",
 "playInNatPlayer":"true"},
 
@@ -367,13 +368,13 @@ url:"https://www.andaman888th.com/%E0%B8%94%E0%B8%B9%E0%B8%9A%E0%B8%AD%E0%B8%A5%
 
 
 {"name":"Premier3-A🇹🇭",
-"image":"https://i.imgur.com/7vyIa83.png",
+"image":"https://dookeela.live/uploads/1664499681.png",
 "url":"https://streaming.livescorethai.net/iptv/epl-3.stream/chunks.m3u8",
 "referer": "https://livescorethai.net/",
 "playInNatPlayer":"true"},
 
 {"name":"Premier3-B🇹🇭",
-"image":"https://i.imgur.com/7vyIa83.png",
+"image":"https://dookeela.live/uploads/1664499681.png",
 "url": "https://cdn1.googlecdn.live/dooballx/epl3/chunks.m3u8",
 "referer": "https://dooballx.com/",
 "playInNatPlayer": "true"},
@@ -420,13 +421,13 @@ url:"https://www.andaman888th.com/%E0%B8%94%E0%B8%B9%E0%B8%9A%E0%B8%AD%E0%B8%A5%
 
 
 {"name":"Premier4-A🇹🇭",
-"image":"https://i.imgur.com/jotDScK.png",
+"image":"https://dookeela.live/uploads/1664499692.png",
 "url":"https://streaming.livescorethai.net/iptv/epl-4.stream/chunks.m3u8",
 "referer": "https://livescorethai.net/",
 "playInNatPlayer":"true"},
 
 {"name":"Premier4-B🇹🇭",
-"image":"https://i.imgur.com/jotDScK.png",
+"image":"https://dookeela.live/uploads/1664499692.png",
 "url": "https://cdn1.googlecdn.live/dooballx/epl4/chunks.m3u8",
 "referer": "https://dooballx.com/",
 "playInNatPlayer": "true"},
@@ -473,13 +474,13 @@ url:"https://www.andaman888th.com/%E0%B8%94%E0%B8%B9%E0%B8%9A%E0%B8%AD%E0%B8%A5%
 
 
 {"name":"Premier5-A🇹🇭",
-"image":"https://i.imgur.com/a2Zsceg.png",
+"image":"https://dookeela.live/uploads/1664499700.png",
 "url":"https://streaming.livescorethai.net/iptv/epl-5.stream/chunks.m3u8",
 "referer": "https://livescorethai.net/",
 "playInNatPlayer":"true"},
 
 {"name":"Premier5-B🇹🇭",
-"image":"https://i.imgur.com/a2Zsceg.png",
+"image":"https://dookeela.live/uploads/1664499700.png",
 "url": "https://cdn1.googlecdn.live/dooballx/epl5/chunks.m3u8",
 "referer": "https://dooballx.com/",
 "playInNatPlayer": "true"},
