--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -6,6 +6,25 @@
 "info": "โรงหนังของแล้ม",
 "stations" : [
 
+
+
+{  
+name:"ท็อปกัน มาเวอริค (2022) IMAX",
+image:"https://img.inwiptv.net/postor/20220823073929jeGvNOVMs5QIU1VaoGvnd3gSv0G.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Top_Gun_Maverick_2022/Top_Gun_Maverick_2022_th_1080p.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+    
+{  
+name:"Kill Chain โคตรโจรอันตราย (2019)",
+image:"https://img.inwiptv.net/postor/201912271217095-2.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Kill_Chain_2019/Kill_Chain_2019_th_1080p.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
     
 {  
 name:"แกะรอยในความมืด (2022) NETFLIX",
