--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -8,6 +8,16 @@
 
 
 
+
+{  
+name:"อะโพคาลิปซิส เซต้า: จุดเริ่มต้นของจุดจบ (2024)",
+image:"https://img.inwiptv.net/postor/20241031160821hSmOrZl8ON2aJk6xvjNgVQiPdCP.jpg",
+url:"https://m1free.inwstream.com:1936/movie4/Apocalypse_Z_The_Beginning_of_the_End_2024/Apocalypse_Z_The_Beginning_of_the_End_2024_th_1080.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+    
 {  
 name:"ท็อปกัน มาเวอริค (2022) IMAX",
 image:"https://img.inwiptv.net/postor/20220823073929jeGvNOVMs5QIU1VaoGvnd3gSv0G.jpg",
