--- a/NexterPremierLeague1.html
+++ b/NexterPremierLeague1.html
@@ -25,14 +25,7 @@
      "info": "NexterPremierLeague",
      "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
     },
-{
-     "name": "True Premier Football 1 HDT3",
-     "image": "https://dookeela.live/uploads/1664499665.png",
-     "url": "https://playidtv24.vercel.app/stream/now/premier2.m3u8",
-     "referer": "https://freetvdd.com",
-     "info": "NexterPremierLeague",
-     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
-    },
+
 			{
      "name": "True Premier Football 1",
      "image": "https://dookeela.live/uploads/1664499665.png",
@@ -171,6 +164,14 @@ url:"https://www.andaman888th.com/%E0%B8%94%E0%B8%B9%E0%B8%9A%E0%B8%AD%E0%B8%A5%
 "playInNatPlayer":"true"},
 
 
+{
+     "name": "True Premier Football 2 HDT",
+     "image": "https://dookeela.live/uploads/1664499673.png",
+     "url": "https://playidtv24.vercel.app/stream/now/premier2.m3u8",
+     "referer": "https://freetvdd.com",
+     "info": "NexterPremierLeague",
+     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
+    },
     {
      "name": "True Premier Football 2",
      "image": "https://dookeela.live/uploads/1664499673.png",
@@ -307,7 +308,14 @@ url:"https://www.andaman888th.com/%E0%B8%94%E0%B8%B9%E0%B8%9A%E0%B8%AD%E0%B8%A5%
 "url":"https://www.ufa77.fun/channel?ch=epl2",
 "playInNatPlayer":"true"},
 
-
+{
+     "name": "True Premier Football 3 HDT",
+     "image": "https://dookeela.live/uploads/1664499681.png",
+     "url": "https://playidtv24.vercel.app/stream/now/premier3.m3u8",
+     "referer": "https://freetvdd.com",
+     "info": "NexterPremierLeague",
+     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
+    },
     {
      "name": "True Premier Football 3",
      "image": "https://dookeela.live/uploads/1664499681.png",
@@ -394,7 +402,14 @@ url:"https://www.andaman888th.com/%E0%B8%94%E0%B8%B9%E0%B8%9A%E0%B8%AD%E0%B8%A5%
 "referer": "https://dooballx.com/",
 "playInNatPlayer": "true"},
 
-
+{
+     "name": "True Premier Football 4 HDT",
+     "image": "https://dookeela.live/uploads/1664499692.png",
+     "url": "https://playidtv24.vercel.app/stream/now/premier4.m3u8",
+     "referer": "https://freetvdd.com",
+     "info": "NexterPremierLeague",
+     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
+    },
     {
      "name": "True Premier Football 4",
      "image": "https://dookeela.live/uploads/1664499692.png",
@@ -447,7 +462,14 @@ url:"https://www.andaman888th.com/%E0%B8%94%E0%B8%B9%E0%B8%9A%E0%B8%AD%E0%B8%A5%
 "referer": "https://dooballx.com/",
 "playInNatPlayer": "true"},
 
-
+{
+     "name": "True Premier Football 5 HDT",
+     "image": "https://dookeela.live/uploads/1664499700.png",
+     "url": "https://playidtv24.vercel.app/stream/now/premier5.m3u8",
+     "referer": "https://freetvdd.com",
+     "info": "NexterPremierLeague",
+     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
+    },
     {
      "name": "True Premier Football 5",
      "image": "https://dookeela.live/uploads/1664499700.png",
