--- a/NexterPremierLeague1.html
+++ b/NexterPremierLeague1.html
@@ -9,7 +9,7 @@
  "stations": [
 
 {
-     "name": "True Premier Football 1 HDT",
+     "name": "True Premier Football 1ID",
      "image": "https://dookeela.live/uploads/1664499665.png",
      "url": "https://playidtv24.vercel.app/stream/now/premier1.m3u8",
      "referer": "https://freetvdd.com",
@@ -18,7 +18,7 @@
     },
 
 {
-     "name": "True Premier Football 1 HDT1",
+     "name": "True Premier Football 1 HD",
      "image": "https://dookeela.live/uploads/1664499665.png",
      "url": "https://streaming.livescorethai.net/iptv/epl-1.stream/chunks.m3u8",
      "referer": "https://freetvdd.com",
@@ -165,7 +165,7 @@ url:"https://www.andaman888th.com/%E0%B8%94%E0%B8%B9%E0%B8%9A%E0%B8%AD%E0%B8%A5%
 
 
 {
-     "name": "True Premier Football 2 HDT",
+     "name": "True Premier Football 2ID",
      "image": "https://dookeela.live/uploads/1664499673.png",
      "url": "https://playidtv24.vercel.app/stream/now/premier2.m3u8",
      "referer": "https://freetvdd.com",
@@ -309,7 +309,7 @@ url:"https://www.andaman888th.com/%E0%B8%94%E0%B8%B9%E0%B8%9A%E0%B8%AD%E0%B8%A5%
 "playInNatPlayer":"true"},
 
 {
-     "name": "True Premier Football 3 HDT",
+     "name": "True Premier Football 3ID",
      "image": "https://dookeela.live/uploads/1664499681.png",
      "url": "https://playidtv24.vercel.app/stream/now/premier3.m3u8",
      "referer": "https://freetvdd.com",
@@ -403,7 +403,7 @@ url:"https://www.andaman888th.com/%E0%B8%94%E0%B8%B9%E0%B8%9A%E0%B8%AD%E0%B8%A5%
 "playInNatPlayer": "true"},
 
 {
-     "name": "True Premier Football 4 HDT",
+     "name": "True Premier Football 4ID",
      "image": "https://dookeela.live/uploads/1664499692.png",
      "url": "https://playidtv24.vercel.app/stream/now/premier4.m3u8",
      "referer": "https://freetvdd.com",
@@ -463,7 +463,7 @@ url:"https://www.andaman888th.com/%E0%B8%94%E0%B8%B9%E0%B8%9A%E0%B8%AD%E0%B8%A5%
 "playInNatPlayer": "true"},
 
 {
-     "name": "True Premier Football 5 HDT",
+     "name": "True Premier Football 5ID",
      "image": "https://dookeela.live/uploads/1664499700.png",
      "url": "https://playidtv24.vercel.app/stream/now/premier5.m3u8",
      "referer": "https://freetvdd.com",
