--- a/Nexter-Backup.html
+++ b/Nexter-Backup.html
@@ -10,7 +10,13 @@
 "groups": [ 
 
 
-
+{
+"name": "GOJEK TV",
+"author": "Nexter",
+"image": "https://img5.pic.in.th/file/secure-sv1/Remove-bg.ai_1730213083955ae6fe5c419105d3c.png",
+"url": "https://bit.ly/3Adfgoz",
+"import": "true"
+},
 
 {
 "name": "URE CH สำรอง",
