--- a/NexterChannel.html
+++ b/NexterChannel.html
@@ -104,11 +104,16 @@
 },
 
 
-
-
-
-
  
+
+
+{
+"name": "GJK IPTV ALL",
+"author": "Nexter",
+"image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/59909a28a230b4902d15b0819d1646b74f1f5b2e/Picture/GJK1.png",
+"url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/GJK-IPTV.html",
+"import": "true"
+},
 
 {
 "name": "ID PLAY TV ALL",
