--- a/GJK-IPTV.html
+++ b/GJK-IPTV.html
@@ -1,14 +1,14 @@
 {		
- "name": "Gojek TV",		
- "author": "Gojek",				
+ "name": "GJK IPTV",		
+ "author": "Nexter",				
  "url": "https://bit.ly/3Adfgoz",	
  "image": "https://img5.pic.in.th/file/secure-sv1/Remove-bg.ai_1730213083955ae6fe5c419105d3c.png",		
  "groups": [		
 
   	{		
    "name": "Digital TV",		
-   "image": "https://img5.pic.in.th/file/secure-sv1/Remove-bg.ai_1730213009487.png",
-   "url": "https://bit.ly/3YBRko8",
+   "image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/GJK-DIgital.png",
+   "url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/GJK/GJK-Digital.html",
    "stations": [		
    ]	
   }	,	
