--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -6,7 +6,14 @@
 "info": "โรงหนังของแล้ม",
 "stations" : [
 
-
+{  
+name:"อย่าแหย่หมาหลับ (2024)",
+image:"https://img.inwiptv.net/postor/202404190309035DwQhh1HvTo7edaOeMX49NUyZqy.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Sleeping_Dogs_2024/Sleeping_Dogs_2024_th_1080_F.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
 
 
 {  
